feat(backend): enhance CORS configuration for local development